added stylesheet and picture folder

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,19 @@
         <title>
             My Webpage!
         </title>
+        <link rel="stylesheet" type="text/css"  href="style.css">
     </head>
     <body>
         Hello World!
+        <ul>
+            <li>This</li>
+            <li>Unordered</li>
+            <li>List</li>
+        </ul>
+        <ol>
+            <li>This</li>
+            <li>Ordered</li>
+            <li>List</li>
+        </ol>
     </body>
 </html>
