--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div>
-                <h1>Hello World! </h1> 
+                <h1>Hello World!</h1> 
+                <h1>New Feature!</h1>
         </div>
         
         <ul id="unord">
